add style with css before passing to js

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,53 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.app-wrapper {
+    height: 100vh;
+    width: 100%;
+}
+/* Header */
+header {
+    height: 100px;
+    background-color: white;
+}
+/* Main */
+main {
+    height: calc(100% - 170px);
+    background-color: #7fffd4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.grid-container {
+    height: 500px;
+    width: 500px;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+}
+.grid-item {
+    height: calc(100% / 10);
+    width: calc(100% / 10);
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.grid-item span {
+    display: none;
+}
+.grid-item.active span {
+    display: block;
+}
+.grid-item.active {
+    background-color: lightblue;
+}
+
+/* Footer */
+footer {
+    height: 70px;
+    background-color: white;
+}
