--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ main {
 .grid-container {
     height: 500px;
     width: 500px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
